# fossil-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
crates/fossil-core/: Cargo.toml
crates/fossil-core/src/: error.rs  lib.rs  storage.rs  types.rs
crates/fossil-indexer/: Cargo.toml
crates/fossil-indexer/src/: error.rs  graph.rs  lib.rs  migration.rs  parser.rs  scip.rs  symbol.rs  vulnerability.rs  watcher.rs
crates/fossil-indexer/src/languages/: mod.rs  python.rs  rust.rs  typescript.rs
crates/fossil-repo/: Cargo.toml
crates/fossil-repo/src/: cache.rs  clone.rs  error.rs  history.rs  lib.rs
crates/fossil-search/: Cargo.toml
crates/fossil-search/src/: error.rs  fuzzy.rs  lib.rs  semantic.rs  traits.rs
crates/fossil-server/: Cargo.toml
crates/fossil-server/src/: main.rs  tools.rs
fixtures/: mod.rs
